fix: deprecated css color function, layout imports

--- a/src/app/styles/button.module.scss
+++ b/src/app/styles/button.module.scss
@@ -5,7 +5,7 @@ $gray-800: #1f2937;
 $gray-border: #475569;
 $white: #ffffff;
 $primary: #39cdcc;
-$primary-hover: darken($primary, 7%);
+$primary-hover: #2fb0ae;
 $focus-ring: rgba($primary, 0.5);
 $focus-ring-offset: 2px;
 
