--- a/src/app/styles/custom-select.module.scss
+++ b/src/app/styles/custom-select.module.scss
@@ -39,7 +39,7 @@
     border-radius: 4px;
     background-color: white;
     color: #334155;
-    background-color: lighten(#334155, 60%);
+    background-color: #cbd5e1;
     font-weight: 500;
     font-size: 14px;
     font-family: var(--work-sans);
