--- a/src/app/styles/dashboard/dashboard-cards.module.scss
+++ b/src/app/styles/dashboard/dashboard-cards.module.scss
@@ -8,7 +8,7 @@
   width: 100%;
   background-color: white;
   border-radius: 5px;
-  border: 1px solid mix(transparent, #213f7d0f, 6%);
+  border: 1px solid rgba(33, 63, 125, 0.06);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.03);
 
   .icon_container {
