--- a/src/app/styles/dashboard/dashboard-id-page.module.scss
+++ b/src/app/styles/dashboard/dashboard-id-page.module.scss
@@ -71,7 +71,7 @@
         color: #39cdcc;
         padding: 0.5rem 1rem;
         &:hover {
-          background-color: lighten(#39cdcc, 40%);
+          background-color: rgba(57, 205, 204, 0.4);
         }
       }
 
@@ -80,7 +80,7 @@
         color: #e53e3e;
         padding: 0.5rem 1rem;
         &:hover {
-          background-color: lighten(#e53e3e, 40%);
+          background-color: rgba(229, 62, 62, 0.4);
         }
       }
     }
@@ -142,8 +142,8 @@
             justify-content: center;
             align-items: center;
             padding: 0rem 2rem;
-            border-left: 1px solid lighten(#545f7d, 40%);
-            border-right: 1px solid lighten(#545f7d, 40%);
+            border-left: 1px solid #a5b4d1;
+            border-right: 1px solid #a5b4d1;
 
             div {
               display: flex;
@@ -193,8 +193,8 @@
               border-left: none;
               border-right: none;
               margin-top: 1rem;
-              border-top: 1px solid lighten(#545f7d, 40%);
-              border-bottom: 1px solid lighten(#545f7d, 40%);
+              border-top: 1px solid #a5b4d1;
+              border-bottom: 1px solid #a5b4d1;
             }
           }
         }
