--- a/src/app/styles/dashboard/dashboard.module.scss
+++ b/src/app/styles/dashboard/dashboard.module.scss
@@ -48,7 +48,7 @@
       font-weight: 400;
       height: 40px;
       &.search_input {
-        border: 1px solid lighten(#213f7d, 60%);
+        border: 1px solid #a8b9d4;
         border-right: none;
         width: 100%;
       }
