--- a/src/app/styles/layout/header.module.scss
+++ b/src/app/styles/layout/header.module.scss
@@ -47,11 +47,11 @@
       font-family: var(--work-sans);
       font-weight: 400;
       &.search_input {
-        border: 1px solid lighten(#213f7d, 60%);
+        border: 1px solid #a8b9d4;
         border-right: none;
         width: 100%;
       }
-      &:focus{
+      &:focus {
         outline: none;
       }
       &::placeholder {
