--- a/src/app/styles/layout/sidebar.module.scss
+++ b/src/app/styles/layout/sidebar.module.scss
@@ -24,7 +24,7 @@
 
   .footer {
     padding-top: 0.8rem;
-    border-top: 1px solid lighten(#213f7d, 60%);
+    border-top: 1px solid #a8b9d4;
 
     p {
       font-size: 12px;
@@ -99,7 +99,7 @@
 
     .footer {
       padding-top: 0.8rem;
-      border-top: 1px solid lighten(#213f7d, 60%);
+      border-top: 1px solid #a8b9d4;
 
       p {
         font-size: 12px;
